--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
       margin-bottom: 80px;
     }
 
-    /* Unique Profile Photo Styling */
     .profile-photo {
       width: 180px;
       height: 180px;
@@ -175,6 +174,7 @@
         <ul>
           <li><a href="#about">About Me</a></li>
           <li><a href="#education">Education</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -218,11 +218,25 @@
       </ul>
     </section>
 
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul class="education-list">
+        <li>
+          <strong>Personal Portfolio Website</strong> — HTML, CSS<br />
+          A fully responsive personal portfolio to showcase my education, skills, and contact information.
+        </li>
+        <li>
+          <strong>Restaurant Management System</strong> — Python<br />
+          A role-based system for managing restaurant orders, chef modules, and admin control using CLI-based Python.
+        </li>
+      </ul>
+    </section>
+
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:shraddha@example.com">shraddhabhattarai48@gmail.com</a></p>
+      <p>Email: <a href="mailto:shraddhabhattarai48@gmail.com">shraddhabhattarai48@gmail.com</a></p>
       <p>Phone: +977-9741897622</p>
-      <p>LinkedIn: <a href="www.linkedin.com/in/shraddha-bhattarai-01a93a333" target="_blank" rel="noopener noreferrer">linkedin.com/in/shraddha</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/shraddha-bhattarai-01a93a333" target="_blank" rel="noopener noreferrer">linkedin.com/in/shraddha</a></p>
     </section>
   </main>
 
